# Jenna-VA

./: .env  .env.template  .gitignore  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  build.py  cleanup.py  frontend_requirements.md  main.py  package-lock.json  requirements.txt  temp.txt
backend/: __init__.py  grpc_server.py  server.py
backend/core/: ai_engine.py  app.py  application.py  audio_processor.py  config.py  desktop_window.py  feature_manager.py  logger.py  nlu_engine.py  plugin_manager.py  rust_bridge.py  service_manager.py  system_tray.py  ui_manager.py  voice_engine.py
backend/features/: calendar_integration.py  calendar_integration_feature.py  dictionary_feature.py  email_feature.py  file_operations_feature.py  financial_management.py  financial_management_feature.py  fixer_feature.py  flashcards.py  flashcards_feature.py  health_fitness.py  health_fitness_feature.py  ipstack_feature.py  mood_detection.py  mood_detection_feature.py  music_media.py  music_media_feature.py  news_feature.py  notes.py  notes_feature.py  nutrition_feature.py  pomodoro.py  pomodoro_feature.py  recipe_feature.py  reminders.py  reminders_feature.py  research.py  research_feature.py  screen_analysis.py  screen_analysis_feature.py  task_management.py  (+7 more)
frontend/: electron-builder.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
proto/: jenna.proto
rust_modules/: Cargo.toml
rust_modules/src/: audio.rs  lib.rs  signal.rs  speech.rs  wake_word.rs
scripts/: build_rust_modules.py  setup_larynx.py  setup_rasa.py  setup_vosk.py
(+45 files in other folders)
