[package]
name = "jenna_rust_modules"
version = "0.1.0"
edition = "2021"
authors = ["Jenna Development Team"]
description = "Rust modules for Jenna Voice Assistant"

[lib]
name = "jenna_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
cpal = "0.15.2"
rustfft = "6.1.0"
ndarray = "0.15.6"
rubato = "0.14.1"
rwav = "0.5.0"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
porcupine = "2.2.1"

[features]
default = ["pyo3/extension-module"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true